--- a/style.css
+++ b/style.css
@@ -135,9 +135,16 @@ header > * {
     display: flex;
     flex-direction: row;
     align-items: center;
+    cursor: pointer;
+}
+
+.first-nav li:active {
+    color: white;
+    border-left: 2px solid greenyellow;
 }
 
 .second-nav {
+    height: 330px;
     overflow-y: auto;
 }
 
