--- a/style.css
+++ b/style.css
@@ -144,6 +144,8 @@ header > * {
     flex-direction: row;
     align-items: center;
     cursor: pointer;
+    margin-left: -15px;
+    padding-left: 15px;
 }
 
 .first-nav li:active {
