--- a/style.css
+++ b/style.css
@@ -333,6 +333,7 @@ main {
 
 .row-top {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
@@ -495,16 +496,32 @@ main {
     RESPONSIVE
 -----------------*/
 
-/* @media screen and (max-width: 1100px) {
+@media screen and (max-width: 1100px) {
+    .col .card {
+        width: calc(100% / 5);
+    }
 
 }
 
 
 @media screen and (max-width: 700px) {
-
+    .col .card {
+        width: calc(100% / 3);
+    }
 }
 
 
 @media screen and (max-width: 600px) {
-
-} */
+    header {
+        width: 70px;
+    }
+    .first-nav a {
+        display: none;
+    }
+    .create-playlist, .second-nav {
+        display: none;
+    }
+    .third-nav span, small {
+        display: none;
+    }
+}
