--- a/style.css
+++ b/style.css
@@ -303,8 +303,8 @@ header > * {
     MAIN
 -----------------*/
 main {
-    width: 100%;
     overflow-y: auto;
+    flex-grow: 1;
 }
 
 .main-container {
@@ -367,14 +367,16 @@ main {
 }
 
 /* ---- ROW MAIN -------*/
+
 .col {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 10px;
 }
 
 .col .card {
-    width: calc(100% / 7);
+    width: calc(100% / 6);
 }
 
 .card figcaption {
@@ -498,7 +500,7 @@ main {
 
 @media screen and (max-width: 1100px) {
     .col .card {
-        width: calc(100% / 5);
+        width: calc(100% / 4);
     }
 
 }
@@ -506,7 +508,7 @@ main {
 
 @media screen and (max-width: 700px) {
     .col .card {
-        width: calc(100% / 3);
+        width: calc(100% / 2);
     }
 }
 
