--- a/style.css
+++ b/style.css
@@ -410,7 +410,6 @@ main {
 }
 
 /* ---- ROW MAIN -------*/
-
 .col {
     width: 100%;
     display: flex;
@@ -420,6 +419,35 @@ main {
 .col .card {
     width: calc(100% / 6);
     padding-right: 20px;
+}
+
+.album {
+    position: relative;
+}
+
+ .album img {
+    display: block;
+}
+
+.album-cover-hover {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(33, 33, 33, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    cursor: pointer;
+    opacity: 0;
+    transition: 0.4s opacity;
+}
+
+.album:hover .album-cover-hover {
+    opacity: 1;
 }
 
 .card figcaption {
@@ -548,7 +576,6 @@ main {
     }
 
 }
-
 
 @media screen and (max-width: 700px) {
     .col .card {
