--- a/style.css
+++ b/style.css
@@ -30,6 +30,9 @@ main::-webkit-scrollbar-thumb {
     border-radius: 10px;
   }
 
+  main::-webkit-scrollbar-thumb:hover {
+    background-color: #25D865;
+  }
 
   /* width */
 .second-nav::-webkit-scrollbar {
@@ -46,7 +49,10 @@ main::-webkit-scrollbar-thumb {
 .second-nav::-webkit-scrollbar-thumb {
     background-color: gray;
     border-radius: 10px;
+  }
 
+.second-nav::-webkit-scrollbar-thumb:hover {
+    background-color: #25D865;
   }
 
 /* ----------------
@@ -362,7 +368,7 @@ main {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    background-color: rgba(8, 11, 18, 0.5);
+    background-color: rgba(8, 11, 18, 0.9);
     margin-bottom: auto;
     position: sticky;
     top: 0;
@@ -438,7 +444,7 @@ main {
     right: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(33, 33, 33, 0.5);
+    background-color: rgba(33, 33, 33, 0.9);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -500,9 +506,16 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 40%;
+    width:calc(100%/3);
     text-align: center;
  }
+
+.button-media {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 
 .button-media button {
     padding-right: 10px;
@@ -587,6 +600,10 @@ main {
         width: calc(100% / 4);
     }
 
+    .card {
+        margin-bottom: 20px;
+    }
+
 }
 
 @media screen and (max-width: 700px) {
@@ -629,7 +646,7 @@ main {
         border-bottom: none;
     }
 
-    .third-nav span, small {
+    .third-nav span, .third-nav small {
         display: none;
     }
 
@@ -637,4 +654,7 @@ main {
         text-align: center;
     }
 
+    .box-song, .box-timeline, .box-volume  {
+        width: 30%;
+    }
 }
